# TaskFlow

./:  - 副本.env  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIXES.md  Makefile  README.md  docker-compose.yml
.android-user-home/: analytics.settings
.codex/agents/: android-dev.toml  backend-go-dev.toml  code-reviewer.toml  deploy-ops.toml  web-vue-dev.toml  windows-tauri-dev.toml
android/: README.md  bootstrap.ps1  bootstrap.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
deploy/: README.md
deploy/docker/: config.toml  nginx.conf
deploy/nginx/: taskflow.conf  taskflow.dev.conf  todoalarm.conf  todoalarm.dev.conf
deploy/samples/: config.production.toml
releases/: latest.json
scripts/: publish-release.ps1  run-server-18080.cmd
scripts-deploy/: _common.ps1  deploy-android.ps1  deploy-web.ps1  deploy-windows.ps1
server/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.18080.toml  config.example.toml  go.mod  go.sum
web/: .gitignore  .npmrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
windows/: .env.example  README.md  build.ps1  package-lock.json  package.json  vite.config.ts
windows/src-tauri/: Cargo.toml  build.rs  fix.ps1  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: README.md
windows/src-tauri/src/: alarm.rs  api.rs  commands.rs  config.rs  db.rs  main.rs  notify.rs  scheduler.rs  sync.rs  tray.rs
(+183 files in other folders)
