[package]
name = "taskflow-tauri"
version = "0.4.0"
description = "TaskFlow Windows desktop client"
edition = "2021"
rust-version = "1.75"

[lib]
name = "taskflow_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri        = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-os           = "2.0"
tauri-plugin-process      = "2.0"
tauri-plugin-autostart    = "2.0"

# Async / utility
tokio   = { version = "1.40", features = ["full"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow  = "1.0"
thiserror = "1.0"
chrono  = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
log     = "0.4"
env_logger = "0.11"

# HTTP client to talk to Go backend
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Local SQLite (用 rusqlite 同步,SQLx 在 Tauri 里编译时间长)
rusqlite = { version = "0.32", features = ["bundled"] }

# Audio for ringing
rodio   = { version = "0.19", default-features = false, features = ["wav", "mp3"] }

# Windows API for misc(可选,bring-window-to-foreground)
[target.'cfg(windows)'.dependencies]
windows  = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
